--- a/leosmediainteractive-monday.user.css
+++ b/leosmediainteractive-monday.user.css
@@ -2,7 +2,7 @@
 @name         leosmediainteractive.monday.com
 @description  leosmediainteractive.monday.com rtl
 @namespace    leosmediainteractive.monday.com.rtl
-@version      0.2.0
+@version      0.2.1
 @author       drorseltzer <drorsel@gmail.com> (https://github.com/drorseltzer)
 @license      unlicense
 @preprocessor stylus
@@ -64,5 +64,19 @@
     .reply-body-component .reply_body .details .detail_tools{
         float: right;
         direction: ltr;
+    }
+    .pulse_container .posts_list .post .post_header .post_title, .new_pulse .posts_list .post .post_header .post_title{
+        direction: ltr;
+    }
+    .pulse_container .posts_list .post .title, .new_pulse .posts_list .post .title{
+        margin-left: 0px;
+        margin-right: 8px;
+    }
+    .pulse_container .posts_list .post .post_header .post_title .post_top_right_wrapper, .new_pulse .posts_list .post .post_header .post_title .post_top_right_wrapper{
+        right: auto;
+        left: 0;
+    }
+    .icon-slider-arrow:before {
+        content: ">";
     }
 }
